Created Event section

--- a/blog-node/src/components/Footer.astro
+++ b/blog-node/src/components/Footer.astro
@@ -7,40 +7,40 @@ import Twitch from '/images/icons8-twitch.gif'
 
 <div class="footer text-[#ffb941] text-center py-5">
     <div class="footer-links flex items-center justify-evenly py-5">
-        <div class="list-1">
-            <h1 class="text-left text-xl font-bold">
+        <div class="list-1 text-left">
+            <h1 class="text-xl font-bold">
                 <a href="/news">
                     News
                 </a>
             </h1>
-            <ul class="text-left">
+            <ul class="">
                 <li>Technology</li>
                 <li>Business</li>
                 <li>Politics</li>
             </ul>
         </div>
-        <div class="list-2">
-            <h1 class="text-left text-xl font-bold">
+        <div class="list-2 text-center">
+            <h1 class="text-xl font-bold">
                 <a href="/job">
                     Jobs
                 </a>
             </h1>
-            <ul class="text-left">
+            <ul class="">
                 <li>Design</li>
                 <li>Marketing</li>
                 <li>Management</li>
             </ul>
         </div>
-        <div class="list-3">
-            <h1 class="text-left text-xl font-bold">
+        <div class="list-3 text-right">
+            <h1 class="text-xl font-bold">
                 <a href="/event">
                     Events
                 </a>
             </h1>
-            <ul class="text-left">
+            <ul class="">
                 <li>Webinars</li>
                 <li>Workshops</li>
-                <li>Conferences</li>
+                <li>Comedy Shows</li>
             </ul>
         </div>
     </div>
