Astro word resolved

--- a/blog-node/src/components/JobCard.astro
+++ b/blog-node/src/components/JobCard.astro
@@ -1,5 +1,5 @@
 ---
-const {Logo, Name, Rating,Review, Bio} = Astor.props;
+const {Logo, Name, Rating,Review, Bio} = Astro.props;
 ---
 
 <div class="job-card rounded-md shadow-md">
