--- a/blog-node/src/components/Navbar.astro
+++ b/blog-node/src/components/Navbar.astro
@@ -1,6 +1,10 @@
 <div class="nav p-5 flex items-center justify-between text-[#ffb941]">
-	<h1 class="text-4xl font-bold text-orange-400">Blog Node</h1>
-	<ul class="md:flex gap-10 md:visible hidden">
+	<h1 class="text-4xl font-bold text-orange-400">
+		<a href="/">
+			Blog Node
+		</a>
+	</h1>
+	<ul class="lg:flex gap-10 lg:visible hidden">
 		<li>
 			<a href="/" class="hover:text-pink-500">Home</a>
 		</li>
