Made certain changes in component

--- a/blog-node/src/components/Footer.astro
+++ b/blog-node/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
-import Twitter from '/images/icons8-twitter.gif'
-import Instagram from '/images/icons8-instagram.gif'
-import Facebook from '/images/icons8-facebook.gif'
-import Twitch from '/images/icons8-twitch.gif'
+import Twitter from '/images/twitter.png'
+import Instagram from '/images/Instagram.png'
+import Facebook from '/images/facebook1.png'
+import Twitch from '/images/twitch1.png'
 ---
 
 <div class="footer text-[#ffb941] text-center py-5">
