--- a/blog-node/src/pages/event.astro
+++ b/blog-node/src/pages/event.astro
@@ -4,7 +4,7 @@ import EventCard from "../components/EventCard.astro";
 import Footer from "../components/Footer.astro";
 ---
 
-<body class="">
+<body class="bg-black text-[#FFCB74]">
     <Navbar />
     <p class="py-32 text-xl md:mx-40 mx-auto">
         Welcome to our Blog Node's Events section, where you can stay informed
@@ -15,7 +15,7 @@ import Footer from "../components/Footer.astro";
         gatherings. Join us as we explore opportunities to learn, network, and
         expand your horizons.
     </p>
-    <div class="event-section grid grid-cols-3 Lg:grid-cols-4 p-5 gap-5">
+    <div class="event-section grid grid-cols-2 lg:grid-cols-4 lg:p-5 p-16 lg:gap-5 gap-10">
         <EventCard
             Image="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:ote-VGh1LCAyOCBEZWM%3D,ots-29,otc-FFFFFF,oy-612,ox-24:q-80/et00358308-cwyhyrqabl-portrait.jpg"
             Head="Sun Burn Goa 2023"
@@ -53,7 +53,7 @@ import Footer from "../components/Footer.astro";
 
         <EventCard
             Image="https://assets-in.bmscdn.com/discovery-catalog/events/tr:w-400,h-600,bg-CCCCCC:w-400.0,h-660.0,cm-pad_resize,bg-000000,fo-top:ote-U2F0LCAyNCBKdW4gb253YXJkcw%3D%3D,ots-29,otc-FFFFFF,oy-612,ox-24:q-80/et00304969-qbrlsfmyek-portrait.jpg"
-            Head="Johnny Lever Teaches Comedy"
+            Head="Johnny Lever Teaches Comedy online"
             Place="Online Streaming"
             Category="Comedy"
             Price="Rs 699"
@@ -89,7 +89,7 @@ import Footer from "../components/Footer.astro";
 
 
     </div>
-    <button class="my-10 flex hover:font-semibold mx-auto text-center p-2 border hover:shadow-md rounded-md">
+    <button class="my-10 flex hover:font-semibold mx-auto text-center p-2 border hover:shadow-md rounded-md text-white">
         <a href="https://in.bookmyshow.com/explore/events">
             View more
         </a>
