--- a/blog-node/src/pages/news.astro
+++ b/blog-node/src/pages/news.astro
@@ -4,11 +4,11 @@ import Card from '../components/NewsCard.astro'
 import Footer from '../components/Footer.astro'
 ---
 
-<body class="text-black">
+<body class="bg-black text-[#FFCB74]">
 	<Navbar />
-	<p class="py-20 text-xl md:mx-40 mx-auto">Welcome to our Blog Node's Section! Stay up-to-date with the latest happenings and breaking news from around the world. Our writers works tirelessly to bring you with insights with wide range of articles in technology, politics, science, entertainment and much more. Whether you're looking for in-depth analysisi or quick news shorts, we've got you covered. Join us we we get deep into the current updaets adn provide engaging, well approved content on the web with just a few taps away.</p>
+	<p class="py-20 text-lg lg:text-2xl lg:mx-40 mx-14">Welcome to our Blog Node's Section! Stay up-to-date with the latest happenings and breaking news from around the world. Our writers works tirelessly to bring you with insights with wide range of articles in technology, politics, science, entertainment and much more. Whether you're looking for in-depth analysisi or quick news shorts, we've got you covered. Join us we we get deep into the current updaets adn provide engaging, well approved content on the web with just a few taps away.</p>
 	<!-- <h1>This is news</h1> -->
-	<main class="grid grid-cols-2 lg:grid-cols-3 gap-5 p-5">
+	<main class="grid grid-cols-2 lg:grid-cols-3 lg:gap-5 gap-16 lg:p-5 p-14">
 		<!-- <div class="top-news">
 		</div> -->
 		<Card 
@@ -60,7 +60,7 @@ import Footer from '../components/Footer.astro'
 		count="43"
 		time="4"/>
 	</main>
-	<button class="my-10 flex hover:font-semibold mx-auto text-center p-2 border hover:shadow-md rounded-md">
+	<button class="my-10 flex hover:font-semibold mx-auto text-center p-2 border hover:shadow-md rounded-md text-white">
         <a href="https://news.google.com/showcase?hl=en-IN&gl=IN&ceid=IN%3Aen">
             View more
         </a>
