--- a/blog-node/src/components/EventCard.astro
+++ b/blog-node/src/components/EventCard.astro
@@ -2,7 +2,7 @@
 const {Image, Head, Place, Category, Price, Link} = Astro.props
 ---
 
-<div class="eve-card border rounded-md hover:shadow-lg">
+<div class="eve-card bg-[#181818] rounded-md hover:shadow-slate-800 hover:shadow-lg hover:scale-105 transition-transform">
     <div class="">
         <img src={Image} alt="" class="rounded-t-md" >
     </div>
@@ -13,7 +13,7 @@ const {Image, Head, Place, Category, Price, Link} = Astro.props
             <p>{Category}</p>
             <p>{Price}</p>
         </div>
-        <button class="py-1 px-2 border hover:border-gray-400 hover:font-semibold rounded-sm">
+        <button class="py-1 px-2 border hover:border-gray-400 hover:font-semibold rounded-sm text-white">
             <a href={Link}>
                 View
             </a>
