--- a/blog-node/src/components/JobCard.astro
+++ b/blog-node/src/components/JobCard.astro
@@ -3,7 +3,7 @@ const {Logo, Name, Rating,Review, Bio,Link} = Astro.props;
 import Star from '/images/Star.png'
 ---
 
-<div class="job-card rounded-md border shadow-md space-y-1 p-3 hover:shadow-lg">
+<div class="job-card bg-[#181818] rounded-md hover:shadow-slate-800 shadow-md space-y-1 p-3 hover:shadow-md hover:scale-105 transition-transform">
     <img src={Logo} alt="" class="border mx-auto rounded-md">
     <h1 class="text-lg font-semibold">{Name}</h1>
     <div class="p-txt p-1 flex flex-col items-center m-10 rounded-md text-sm">
@@ -14,7 +14,7 @@ import Star from '/images/Star.png'
         </p>
         <p class="">{Bio}</p>
     </div>
-    <button class="mt-5 py-1 px-2 border rounded-sm hover:border-gray-400">
+    <button class="mt-5 py-1 px-2 border border-gray-500 rounded-sm hover:border-gray-200 text-white">
         <a href={Link}>
             View Jobs
         </a>
