--- a/blog-node/src/pages/home.astro
+++ b/blog-node/src/pages/home.astro
@@ -4,17 +4,18 @@ import JobB from '/images/job1.avif'
 import Image1 from '/images/img-1.avif'
 import Image2 from '/images/jobSeek.avif'
 import HomeCard from '../components/HomeCard.astro'
-import Twitter from '/images/icons8-twitter.gif'
-import Instagram from '/images/icons8-instagram.gif'
-import Facebook from '/images/icons8-facebook.gif'
-import Twitch from '/images/icons8-twitch.gif'
+import Twitter from '/images/twitter.png'
+import Instagram from '/images/Instagram.png'
+import Facebook from '/images/facebook1.png'
+import Twitch from '/images/twitch1.png'
 import Event from '/images/event.avif'
 ---
 
 <main class="p-5">
-    <section class="md:py-52 py-20 hero md:flex justify-center gap-10">
-        <h1 class="text-5xl w-auto md:w-1/3">Unleash your thoughts.</h1>
-        <p class="text-xl md:mt-0 mt-5 w-auto md:w-1/3">Welcome to Blog Node, where we explore the fascinating, the wild and the downright quirky world of the latest news, job oppurtunities and events get ready for an engaging and eye-opening experiences.</p>
+    <p class="text-sm text-center lg:hidden visible">Due to issue in js file you can access news, jobs and events through footer in mobile view.</p>
+    <section class="hero lg:p-48 py-20 text-center gap-10">
+        <h1 class="text-5xl mb-5">Unleash your thoughts.</h1>
+        <p class="text-xl">Welcome to Blog Node, where we explore the fascinating, the wild and the downright quirky world of the latest news, job oppurtunities and events get ready for an engaging and eye-opening experiences.</p>
     </section>
     <section class="md:py-12 py-5 md:flex flex-col md:flex-row gap-20">
         <div class="left-hero md:w-1/2">
